--- a/client/src/components/EventList/style.css
+++ b/client/src/components/EventList/style.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700";
+@import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700";
 
 .container {
     margin-top: 20px;
