--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 .navbar{
     background-color: #4e606e;
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Major Mono Display', Arial, Helvetica, monospace;
 
 }
 
