more changes to myevents page

--- a/client/src/components/UserInfo/UserInfo.css
+++ b/client/src/components/UserInfo/UserInfo.css
@@ -1,5 +1,5 @@
-.concert-card {
-    width: 50% !important;
+.concert-card, .map-card {
+    /* width: 50% !important; */
     color: whitesmoke;
     /* margin: 0 auto; */
 }
