added some style changes and about page

--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -1,6 +1,7 @@
 .navbar{
     background-color: #4e606e;
     font-family: 'Major Mono Display', Arial, Helvetica, monospace;
+    border-bottom: 1px whitesmoke solid;
 
 }
 
