whole bunch of front end changes

--- a/client/src/components/NickName.css
+++ b/client/src/components/NickName.css
@@ -1,12 +1,12 @@
 .form-container {
   height: 150px;
   border: 1px solid #5E0565;
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
 }
 .form-container h1,label {
   padding: 10px;
   /* background-color: #5E0565; */
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
   font-size: 20px;
   color: white;
   margin: 0;
