--- a/client/src/components/ChatApp.css
+++ b/client/src/components/ChatApp.css
@@ -1,8 +1,8 @@
 :root {
-  --main-color: #5ea3d0;
-  --secondary-color: white;
+  --main-color: #4e606e;
+  --secondary-color: whitesmoke;
   --main-text-color: #3e5869;
-  --secondary-text-color: #b0c7d6;
+  --secondary-text-color: whitesmoke;
   --send-message-form: #f5f5f5;
 }
 
