--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background: #4e606e;
-    border-top: 1px whitesmoke solid;
-    height: 35px;
+    background: black;
+    height: 30px;
+    opacity: 0.8;
 }
